# bevycheck

./: Cargo.toml  README.md
examples/: test.rs
src/: lib.rs  tests.rs
tests/ui/: 01-okay.rs  02-commands.rs  02-commands.stderr  03-arbitrary-type.rs  03-arbitrary-type.stderr  04-query-invalid.rs  04-query-invalid.stderr  05-too-many-params.rs  05-too-many-params.stderr  06-query-set.rs  06-query-set.stderr  07-query-with-added.rs  07-query-with-added.stderr  08-query-filter-invalid.rs  08-query-filter-invalid.stderr
