[package]
name = "bevycheck"
version = "0.1.3"
authors = ["Jakob Hellermann <hellermann@sipgate.com>"]
readme = "README.md"
edition = "2018"
repository = "https://github.com/jakobhellermann/bevycheck"
license = "MIT"
description = "Helpful bevy error messages by proc-macro"
keywords = ["bevy", "errors", "debug"]
categories = ["development-tools::procedural-macro-helpers", "game-development"]

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro-error = "1.0"
bevy = { version = "0.5", default-features = false }

[dev-dependencies]
trybuild = "1.0"

# [[test]]
# name = "try"
# path = "tests/ui/test.rs"


[[example]]
name = "test"
test = false