[package]
name = "bevycheck"
version = "0.5.2"
authors = ["Jakob Hellermann <hellermann@sipgate.com>"]
readme = "README.md"
edition = "2021"
repository = "https://github.com/jakobhellermann/bevycheck"
license = "MIT"
description = "Helpful bevy error messages by proc-macro"
keywords = ["bevy", "errors", "debug"]
categories = ["development-tools::procedural-macro-helpers", "game-development"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", default-features = false, features = ["full", "parsing", "proc-macro", "printing"] }
quote = "1.0"

[dev-dependencies]
trybuild = "1.0"
bevy = { version = "0.10", default-features = false }

# [[test]]
# name = "try"
# path = "tests/ui/test.rs"

[[example]]
name = "test"
test = false
